# hackathons

open-gdict/: README.md
open-gdict/converter/: Cargo.toml
open-gdict/converter/src/: main.rs
open-gdict/converter/src/types/: definition.rs  dictionary.rs  meaning.rs  mod.rs  phonetic.rs  word.rs
