[package]
name = "converter"
version = "0.1.0"
authors = ["brilliant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
reqwest = { version = "*", features = ["blocking"] }
url = "*"
